[tool.poetry]

name = "hikaio"
version = "0.0"
description = "Hikvision asyncio"

license = "MIT"

authors = ["Patrick Forringer <patrick@forringer.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/hikaio"
documentation = "https://hikaio.readthedocs.io"
repository = "https://github.com/destos/hikaio"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]

python = "^3.8"

# TODO: Remove these and add your library's requirements
click = "^6.0"
minilog = "~0.4"

[tool.poetry.dev-dependencies]

# Formatters
black = "=19.3b0"
isort = "=4.3.4"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }

[tool.poetry.scripts]

HikAIO = "hikaio.cli:main"

[tool.black]

target-version = ["py36", "py37"]
skip-string-normalization = true

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
